--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
                         {{ .Site.Params.Moto }}
                     </h2>
                     <p class="max-w-xl mx-auto mb-6 font-normal text-gray-900 lg:mx-0 xl:mb-2 md:text-lg xl:text-xl dark:text-gray-50">
-                        {{ .Site.Params.Description}}
+                        {{ .Site.Params.Subtitle}}
                     </p>
                 </div>
                 <div class="col-span-6">
