--- a/layouts/index.html
+++ b/layouts/index.html
@@ -250,7 +250,7 @@
                             {{ .Site.Params.P5.Heading }}
                         </h2>
                         {{ range .Site.Params.P5.Content }}
-                        <p class="max-w-2xl mx-auto mt-6 text-lg text-primary-100">
+                        <p class="max-w-2xl mx-auto mt-6 text-lg text-white">
                             {{ .text }}
                         </p>
                         {{ end }}
