--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,8 +4,10 @@
         <div class="max-w-screen-xl px-4 py-8 mx-auto">
             <div class="grid items-center gap-8 mb-8 sm:mb-0 lg:gap-12 lg:grid-cols-12">
                 <div class="col-span-6 px-4 text-center sm:mb-6 lg:text-left lg:mb-0">
-                    <h1 class="mb-2 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl xl:text-6xl dark:text-white">
-                        {{ .Site.Title }}
+                    <h1 class="mb-2 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl xl:text-6xl dark:text-white pt-6">
+                        <p>{{ .Site.Params.Titlel1 | markdownify}}<span class="font-light"> lean</span>.</p>
+                        <p>{{ .Site.Params.Titlel2 | markdownify}}<span class="text-primary-600"> green</span>.</p>
+                        <p>{{ .Site.Params.Titlel3 | markdownify}}<span> </span><span class="underline">STEM machine</span>.</p>
                     </h1>
                     <h2 class="pb-2 text-3xl font-light text-gray-800 dark:text-gray-300 md:text-4xl">
                         {{ .Site.Params.Moto }}
@@ -146,7 +148,7 @@
                 {{ end }}
                 {{ range .Site.Params.P3.Links }}
                 <div class="my-6">
-                    <a href="{{ .url }}" class="text-base font-medium text-primary-400 dark:text-primary-100">
+                    <a href="{{ .url }}" class="text-base font-medium text-primary-500 dark:text-primary-100">
                         {{ .text }}&nbsp&rarr;
                     </a>
                 </div>
