--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3205,6 +3205,11 @@ video {
   padding-bottom: 24rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
