--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,12 +3,18 @@
 
 <head>
     {{ partial "head.html" . }}
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 </head>
 
 <body class="bg-zinc-100 dark:bg-gray-800">
     {{ partial "nav.html" . }}
     {{ block "main" . }}{{ end }}
     {{ partial "footer" . }}
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 
 </html>
