--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,9 +5,9 @@
             <div class="grid items-center gap-8 mb-8 sm:mb-0 lg:gap-12 lg:grid-cols-12">
                 <div class="col-span-6 px-4 text-center sm:mb-6 lg:text-left lg:mb-0">
                     <h1 class="mb-2 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl xl:text-6xl dark:text-white pt-6">
-                        <p class=" py-3">{{ .Site.Params.Titlel1 | markdownify}}<span class="font-light"> lean</span>.</p>
-                        <p class=" py-3">{{ .Site.Params.Titlel2 | markdownify}}<span class="text-primary-600"> green</span>.</p>
-                        <p class=" py-3">{{ .Site.Params.Titlel3 | markdownify}}<span> </span><span class="underline">STEM machines</span>.</p>
+                        <p class="py-3" data-aos="fade-right" data-aos-delay="200">We're<span class="font-light"> lean</span>.</p>
+                        <p class="py-3" data-aos="fade-right" data-aos-delay="400">We're<span class="text-primary-600"> green</span>.</p>
+                        <p class="py-3" data-aos="fade-right" data-aos-delay="600">We build <a href="robots"><span class="animate-text bg-gradient-to-r from-teal-500 via-purple-500 to-orange-500 bg-clip-text text-transparent">exceptional machines</span></a>.</p>
                     </h1>
                     <h2 class="pb-2 text-3xl font-light text-gray-800 dark:text-gray-300 md:text-4xl">
                         {{ .Site.Params.Moto }}
@@ -16,7 +16,7 @@
                         {{ .Site.Params.Subtitle}}
                     </p>
                 </div>
-                <div class="col-span-6">
+                <div class="col-span-6" data-aos="fade-left">
                     {{ $hero := resources.GetMatch "images/pages/site-logo.png" }}
 
                     {{ $thumb := ($hero.Fill "400x400 webp q90") }}
@@ -33,8 +33,8 @@
     <!-- More main page content here... -->
 
     <!-- Our mission section -->
-    <div class="relative my-4">
-        <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:items-start lg:gap-24 lg:px-8">
+    <div class="relative my-4" >
+        <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:items-start lg:gap-24 lg:px-8" data-aos="fade-right">
             <div class="relative sm:py-8 lg:py-0">
                 <div aria-hidden="true" class="hidden sm:block lg:absolute lg:inset-y-0 lg:right-0 lg:w-screen">
                     <div class="absolute inset-y-0 w-full bg-gray-50 dark:bg-gray-900/10 right-1/2 rounded-r-3xl lg:right-72"></div><svg class="absolute -ml-3 top-8 left-1/2 lg:-right-8 lg:left-auto lg:top-12" width="404" height="392" fill="none" viewBox="0 0 404 392" loading="lazy">
@@ -46,7 +46,7 @@
                         <rect width="404" height="392" fill="url(#02f20b47-fd69-4224-a62a-4c9de5c763f7)"></rect>
                     </svg>
                 </div>
-                <div class="relative w-full h-auto px-4 py-6 mx-auto sm:max-w-3xl sm:px-6 lg:px-0 lg:py-20">
+                <div class="relative w-full h-auto px-4 py-6 mx-auto sm:max-w-3xl sm:px-6 lg:px-0 lg:py-20" data-aos="fade-left">
                     <div class="overflow-hidden shadow-xl rounded-2xl">
                         {{ $p1image := resources.Get .Site.Params.P1.Image }}
                         {{ with $p1image }}
@@ -77,7 +77,7 @@
     </div>
 
     <!-- JITsection -->
-    <div class="overflow-hidden sm:pt-6 lg:relative">
+    <div class="overflow-hidden sm:pt-6 lg:relative" data-aos="fade-left">
         <div class="max-w-md px-4 mx-auto sm:max-w-3xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-2 lg:gap-12 lg:px-8">
             <div>
                 <div class="md:mt-8">
@@ -107,7 +107,7 @@
                         <rect width="404" height="392" fill="url(#837c3e70-6c3a-44e6-8854-cc48c737b659)"></rect>
                     </svg>
                 </div>
-                <div class="relative pl-4 -mr-40 sm:mx-auto sm:max-w-3xl sm:px-0 lg:h-full lg:max-w-none lg:pl-12">
+                <div class="relative pl-4 -mr-40 sm:mx-auto sm:max-w-3xl sm:px-0 lg:h-full lg:max-w-none lg:pl-12 ">
                     {{ $p2image := resources.Get .Site.Params.P2.Image }}
                     {{ with $p2image }}
                     {{ with .Resize (printf "%dx%d webp q90" .Width .Height) }}
