--- a/layouts/index.html
+++ b/layouts/index.html
@@ -78,7 +78,7 @@
 
     <!-- JITsection -->
     <div class="overflow-hidden sm:pt-6 lg:relative" data-aos="fade-left">
-        <div class="max-w-md px-4 mx-auto sm:max-w-3xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-2 lg:gap-12 lg:px-8">
+        <div class="max-w-md px-4 mx-auto sm:max-w-3xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-2 lg:gap-12 lg:px-8" data-aos="fade-right">
             <div>
                 <div class="md:mt-8">
                     <div class="mt-6 sm:max-w-xl">
@@ -95,7 +95,7 @@
                 </div>
             </div>
         </div>
-        <div class="sm:mx-auto sm:max-w-3xl sm:px-6">
+        <div class="sm:mx-auto sm:max-w-3xl sm:px-6" >
             <div class="md:py-12 sm:relative sm:mt-12 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
                 <div class="hidden sm:block">
                     <div class="absolute inset-y-0 w-screen left-1/2 rounded-l-3xl bg-gray-50 dark:bg-gray-900/10 lg:left-80 lg:right-0 lg:w-full"></div><svg class="absolute -mr-3 top-8 right-1/2 lg:left-0 lg:m-0" width="404" height="392" fill="none" viewBox="0 0 404 392" loading="lazy">
@@ -122,7 +122,7 @@
 
 
     <!-- Sponsors section -->
-    <div class="max-w-md px-4 mx-auto md:pt-24 md:pb-16 sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8">
+    <div class="max-w-md px-4 mx-auto md:pt-24 md:pb-16 sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8" data-aos="fade-left">
         <div class="lg:grid lg:grid-cols-2 lg:items-center lg:gap-24">
             <div class="mt-12 grid grid-cols-2 gap-0.5 md:grid-cols-3 lg:mt-0 lg:grid-cols-2">
                 {{ range .Site.Params.P3.Logos }}
@@ -158,7 +158,7 @@
     </div>
 
     <!-- Blog section -->
-    <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12">
+    <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12" data-aos="fade-right">
         <div class="absolute inset-0">
             <div class="bg-gray-200 dark:bg-gray-900/50 h-1/3 sm:h-2/3"></div>
         </div>
@@ -237,7 +237,7 @@
 
     {{ if not .Site.Params.Disable_stay_uptodate}}
     <!-- CTA section -->
-    <div class="relative pb-16 mt-6">
+    <div class="relative pb-16 mt-6" data-aos="fade-left">
         <div class="max-w-md mx-auto px-7 sm:max-w-3xl lg:max-w-7xl">
             <div class="relative px-6 py-10 overflow-hidden shadow-xl bg-primary-500 rounded-2xl sm:px-12 sm:py-20">
                 <div aria-hidden="true" class="absolute inset-0 -mt-72 sm:-mt-32 md:mt-0">
