--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,9 +5,9 @@
             <div class="grid items-center gap-8 mb-8 sm:mb-0 lg:gap-12 lg:grid-cols-12">
                 <div class="col-span-6 px-4 text-center sm:mb-6 lg:text-left lg:mb-0">
                     <h1 class="mb-2 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl xl:text-6xl dark:text-white pt-6">
-                        <p class="py-3" data-aos="fade-right" data-aos-delay="200">We're<span class="font-light"> lean</span>.</p>
-                        <p class="py-3" data-aos="fade-right" data-aos-delay="400">We're<span class="text-primary-600"> green</span>.</p>
-                        <p class="py-3" data-aos="fade-right" data-aos-delay="600">We build <a href="robots"><span class="animate-text bg-gradient-to-r from-teal-500 via-purple-500 to-orange-500 bg-clip-text text-transparent">exceptional machines</span></a>.</p>
+                        <p class="py-3" data-aos="fade-right" data-aos-delay="200">We're<span class="font-light" data-aos-offset="300"> lean</span>.</p>
+                        <p class="py-3" data-aos="fade-right" data-aos-delay="400">We're<span class="text-primary-600" data-aos-offset="300"> green</span>.</p>
+                        <p class="py-3" data-aos="fade-right" data-aos-delay="600">We build <a href="robots"><span class="animate-text bg-gradient-to-r from-teal-500 via-purple-500 to-orange-500 bg-clip-text text-transparent" data-aos-offset="300">exceptional machines</span></a>.</p>
                     </h1>
                     <h2 class="pb-2 text-3xl font-light text-gray-800 dark:text-gray-300 md:text-4xl">
                         {{ .Site.Params.Moto }}
@@ -16,7 +16,7 @@
                         {{ .Site.Params.Subtitle}}
                     </p>
                 </div>
-                <div class="col-span-6" data-aos="fade-left">
+                <div class="col-span-6" data-aos="fade-up" data-aos-offset="300">
                     {{ $hero := resources.GetMatch "images/pages/site-logo.png" }}
 
                     {{ $thumb := ($hero.Fill "400x400 webp q90") }}
@@ -34,7 +34,7 @@
 
     <!-- Our mission section -->
     <div class="relative my-4" >
-        <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:items-start lg:gap-24 lg:px-8" data-aos="fade-right">
+        <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:items-start lg:gap-24 lg:px-8" data-aos="fade-right" data-aos-offset="300">
             <div class="relative sm:py-8 lg:py-0">
                 <div aria-hidden="true" class="hidden sm:block lg:absolute lg:inset-y-0 lg:right-0 lg:w-screen">
                     <div class="absolute inset-y-0 w-full bg-gray-50 dark:bg-gray-900/10 right-1/2 rounded-r-3xl lg:right-72"></div><svg class="absolute -ml-3 top-8 left-1/2 lg:-right-8 lg:left-auto lg:top-12" width="404" height="392" fill="none" viewBox="0 0 404 392" loading="lazy">
@@ -46,7 +46,7 @@
                         <rect width="404" height="392" fill="url(#02f20b47-fd69-4224-a62a-4c9de5c763f7)"></rect>
                     </svg>
                 </div>
-                <div class="relative w-full h-auto px-4 py-6 mx-auto sm:max-w-3xl sm:px-6 lg:px-0 lg:py-20" data-aos="fade-left">
+                <div class="relative w-full h-auto px-4 py-6 mx-auto sm:max-w-3xl sm:px-6 lg:px-0 lg:py-20" data-aos="fade-up" data-aos-offset="300">
                     <div class="overflow-hidden shadow-xl rounded-2xl">
                         {{ $p1image := resources.Get .Site.Params.P1.Image }}
                         {{ with $p1image }}
@@ -77,8 +77,8 @@
     </div>
 
     <!-- JITsection -->
-    <div class="overflow-hidden sm:pt-6 lg:relative" data-aos="fade-left">
-        <div class="max-w-md px-4 mx-auto sm:max-w-3xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-2 lg:gap-12 lg:px-8" data-aos="fade-right">
+    <div class="overflow-hidden sm:pt-6 lg:relative" data-aos="fade-up" data-aos-offset="300">
+        <div class="max-w-md px-4 mx-auto sm:max-w-3xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-2 lg:gap-12 lg:px-8" data-aos="fade-right" data-aos-offset="300">
             <div>
                 <div class="md:mt-8">
                     <div class="mt-6 sm:max-w-xl">
@@ -122,7 +122,7 @@
 
 
     <!-- Sponsors section -->
-    <div class="max-w-md px-4 mx-auto md:pt-24 md:pb-16 sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8" data-aos="fade-left">
+    <div class="max-w-md px-4 mx-auto md:pt-24 md:pb-16 sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8" data-aos="fade-up" data-aos-offset="300">
         <div class="lg:grid lg:grid-cols-2 lg:items-center lg:gap-24">
             <div class="mt-12 grid grid-cols-2 gap-0.5 md:grid-cols-3 lg:mt-0 lg:grid-cols-2">
                 {{ range .Site.Params.P3.Logos }}
@@ -158,7 +158,7 @@
     </div>
 
     <!-- Blog section -->
-    <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12" data-aos="fade-right">
+    <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12" data-aos="fade-right" data-aos-offset="300">
         <div class="absolute inset-0">
             <div class="bg-gray-200 dark:bg-gray-900/50 h-1/3 sm:h-2/3"></div>
         </div>
@@ -237,7 +237,7 @@
 
     {{ if not .Site.Params.Disable_stay_uptodate}}
     <!-- CTA section -->
-    <div class="relative pb-16 mt-6" data-aos="fade-left">
+    <div class="relative pb-16 mt-6" data-aos="fade-up" data-aos-offset="300">
         <div class="max-w-md mx-auto px-7 sm:max-w-3xl lg:max-w-7xl">
             <div class="relative px-6 py-10 overflow-hidden shadow-xl bg-primary-500 rounded-2xl sm:px-12 sm:py-20">
                 <div aria-hidden="true" class="absolute inset-0 -mt-72 sm:-mt-32 md:mt-0">
