--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -56,5 +56,7 @@
             {{ .Site.Title }}. All rights
             reserved.</p>
         </p>
+        <p class="mt-8 text-base text-center text-gray-400">Made with 🤍 by <a href="https://github.com/kaijif">Kaiji Fu</a></p>
+        </p>
     </div>
 </footer>
