--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,9 +5,9 @@
             <div class="grid items-center gap-8 mb-8 sm:mb-0 lg:gap-12 lg:grid-cols-12">
                 <div class="col-span-6 px-4 text-center sm:mb-6 lg:text-left lg:mb-0">
                     <h1 class="mb-2 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl xl:text-6xl dark:text-white pt-6">
-                        <p class="py-3" data-aos="fade-right" data-aos-delay="400">We're<span class="font-light" data-aos-offset="300"> lean</span>.</p>
-                        <p class="py-3" data-aos="fade-right" data-aos-delay="800">We're<span class="text-primary-600" data-aos-offset="300"> green</span>.</p>
-                        <p class="py-3" data-aos="fade-right" data-aos-delay="1200">We build <a href="robots"><span class="animate-text bg-gradient-to-r from-teal-500 via-purple-500 to-orange-500 bg-clip-text text-transparent" data-aos-offset="300">exceptional machines</span></a>.</p>
+                        <p class="py-3" data-aos="fade-right" data-aos-delay="400">We're<span class="font-light" data-aos-offset="300"> lean</span></p>
+                        <p class="py-3" data-aos="fade-right" data-aos-delay="800">We're<span class="text-primary-600" data-aos-offset="300"> green</span></p>
+                        <p class="py-3" data-aos="fade-right" data-aos-delay="1200">We build <a href="robots"><span class="animate-text bg-gradient-to-r from-teal-500 via-purple-500 to-orange-500 bg-clip-text text-transparent" data-aos="zoom-out" data-aos-delay="1600" data-aos-duration="2000">exceptional machines</span></a></p>
                     </h1>
                     <h2 class="pb-2 text-3xl font-light text-gray-800 dark:text-gray-300 md:text-4xl">
                         {{ .Site.Params.Moto }}
