--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3472,6 +3472,16 @@ html.js :where([class*="taos:"]:not(.taos-init)) {
   color: rgb(24 24 27 / var(--tw-text-opacity));
 }
 
+.text-primary-800 {
+  --tw-text-opacity: 1;
+  color: rgb(103 180 45 / var(--tw-text-opacity));
+}
+
+.text-primary-700 {
+  --tw-text-opacity: 1;
+  color: rgb(128 208 67 / var(--tw-text-opacity));
+}
+
 .text-opacity-40 {
   --tw-text-opacity: 0.4;
 }
