--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3139,9 +3139,19 @@ html.js :where([class*="taos:"]:not(.taos-init)) {
   background-position: center;
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-fill {
   -o-object-fit: fill;
      object-fit: fill;
+}
+
+.object-scale-down {
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
 
 .p-2 {
@@ -3301,6 +3311,10 @@ html.js :where([class*="taos:"]:not(.taos-init)) {
 
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .text-left {
@@ -4520,9 +4534,17 @@ EmojiSymbols;
     height: 66.666667%;
   }
 
+  .sm\:h-auto {
+    height: auto;
+  }
+
   .sm\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
+  }
+
+  .sm\:w-full {
+    width: 100%;
   }
 
   .sm\:max-w-3xl {
