--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,31 +1,13 @@
 {{ define "main" }}
 <main>
-    <div class="bg-gray-200 dark:bg-gray-900">
-        <div class="max-w-screen-xl px-4 py-8 mx-auto">
-            <div class="grid items-center gap-8 mb-8 sm:mb-0 lg:gap-12 lg:grid-cols-12">
-                <div class="col-span-6 px-4 text-center sm:mb-6 lg:text-left lg:mb-0">
-                    <h1 class="mb-2 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl xl:text-6xl dark:text-white pt-6">
-                        <p class="py-3" data-aos="fade-right" data-aos-delay="400">We're<span class="font-light" data-aos-offset="300"> lean</span></p>
-                        <p class="py-3" data-aos="fade-right" data-aos-delay="800">We're<span class="text-primary-600" data-aos-offset="300"> green</span></p>
-                        <p class="py-3" data-aos="fade-right" data-aos-delay="1200">We build <a href="robots"><span class="animate-text bg-gradient-to-r from-teal-500 via-purple-500 to-orange-500 bg-clip-text text-transparent" data-aos="zoom-out" data-aos-delay="1600" data-aos-duration="2000">extraordinary machines</span></a></p>
-                    </h1>
-                    <h2 class="pb-2 text-3xl font-light text-gray-800 dark:text-gray-300 md:text-4xl">
-                        {{ .Site.Params.Moto }}
-                    </h2>
-                    <p class="max-w-xl mx-auto mb-6 font-normal text-gray-900 lg:mx-0 xl:mb-2 md:text-lg xl:text-xl dark:text-gray-50">
-                        {{ .Site.Params.Subtitle}}
-                    </p>
-                </div>
-                <div class="col-span-6" data-aos="fade-up" data-aos-offset="300">
-                    {{ $hero := resources.GetMatch "images/pages/site-logo.png" }}
-
-                    {{ $thumb := ($hero.Fill "400x400 webp q90") }}
-                    {{ $large := ($hero.Fill "576x576 webp q90") }}
-
-                    <img srcset="
-                        {{- with $thumb.RelPermalink -}}{{.}} 400w{{- end -}}
-                        {{- with $large.RelPermalink -}}, {{.}} 576w{{- end -}}" src="{{ $hero.RelPermalink }}" width="100%" height="" alt="TailBliss Hero" class="w-full max-w-xl mx-auto rounded-lg object-fit: contain;" />
-                </div>
+    <div class="bg-gray-200 dark:bg-gray-900 ">
+        <div class="max-w-screen-xl px-4 py-36 mx-auto align-text-bottom p">
+            <div class="col-span-6 px-4 text-center sm:mb-6 lg:text-left lg:mb-0 ">
+                <h1 class="text-center mb-2 text-5xl font-extrabold leading-none tracking-tight text-gray-900 md:text-6xl xl:text-7xl dark:text-white pt-6">
+                    <p class="py-6" data-aos="fade-right" data-aos-delay="400">We're<span class="font-light" data-aos-offset="300"> lean</span></p>
+                    <p class="py-6" data-aos="fade-right" data-aos-delay="800">We're<span class="text-primary-600" data-aos-offset="300"> green</span></p>
+                    <p class="py-6" data-aos="fade-right" data-aos-delay="1200">We build <a href="robots"><span class="animate-text bg-gradient-to-r from-teal-500 via-purple-500 to-orange-500 bg-clip-text text-transparent" data-aos="zoom-out" data-aos-delay="1600" data-aos-duration="2000">extraordinary machines</span></a></p>
+                </h1>
             </div>
         </div>
     </div>
